--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front-end",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "2.1.7",
     "vue": "3.3.8"
   },
   "devDependencies": {
