--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -1,6 +1,13 @@
 {
-  "env": {
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:vue/vue3-recommended", "prettier"]
+  "extends": "eslint:recommended",
+  "parser": "vue-eslint-parser",
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020,
+    "ecmaFeatures": {
+      "globalReturn": false,
+      "impliedStrict": true,
+      "jsx": false
+    }
+  }
 }
