--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,22 +7,22 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src",
+    "lint": "eslint src --ext .vue",
     "format": "prettier .  --write"
   },
   "dependencies": {
     "axios": "1.6.2",
     "pinia": "2.1.7",
-    "vue": "3.3.8"
+    "vue": "3.3.8",
+    "vue-router": "4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.5.0",
     "eslint": "8.55.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-vue": "9.19.2",
     "prettier": "3.1.1",
     "typescript": "5.2.2",
     "vite": "5.0.7",
+    "vue-eslint-parser": "9.3.2",
     "vue-tsc": "1.8.22"
   }
 }
