--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .vue",
-    "format": "prettier .  --write"
+    "lint": "eslint src --ext .ts",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "axios": "1.6.2",
@@ -17,12 +17,12 @@
     "vue-router": "4.2.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "6.14.0",
     "@vitejs/plugin-vue": "4.5.0",
     "eslint": "8.55.0",
     "prettier": "3.1.1",
     "typescript": "5.2.2",
     "vite": "5.0.7",
-    "vue-eslint-parser": "9.3.2",
     "vue-tsc": "1.8.22"
   }
 }
